--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "main": "index.ts",
     "scripts": {
         "build": "tsc",
-        "start": "node dist/index.js",
-        "dev": "ts-node src/index.ts",
+        "start": "node dist/server.js",
+        "dev": "ts-node src/server.ts",
         "test": "jest",
         "test:watch": "jest --watchAll",
         "test:coverage": "jest --coverage",
@@ -20,9 +20,12 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@jest-mock/express": "^2.1.0",
         "@prisma/client": "^6.2.1",
+        "@types/compression": "^1.7.5",
         "@types/express": "^5.0.0",
         "@types/jest": "^29.5.14",
+        "@types/luxon": "^3.4.2",
         "@types/node": "^22.10.6",
         "@typescript-eslint/eslint-plugin": "^8.20.0",
         "@typescript-eslint/parser": "^8.20.0",
@@ -34,6 +37,7 @@
         "express": "^4.21.2",
         "express-rate-limit": "^7.5.0",
         "jest": "^29.7.0",
+        "jest-mock-extended": "^4.0.0-beta1",
         "luxon": "^3.5.0",
         "prettier": "^3.4.2",
         "ts-jest": "^29.2.5",
