fix: dev env and newman

--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
     "name": "calendar_management",
     "version": "1.0.0",
     "description": "A calendar management app",
-    "main": "index.ts",
+    "main": "./src/app.ts",
+    "type": "module",
     "scripts": {
-        "build": "tsc",
-        "start": "node dist/server.js",
-        "dev": "ts-node src/server.ts",
+        "dev": "npx tsx src/app.ts",
+        "build": "rimraf ./dist && tsc --outDir ./dist",
+        "start": "node dist/src/app.js",
+        "test-flag": "node --experimental-specifier-resolution=node jest",
         "test": "jest",
         "test:watch": "jest --watchAll",
         "test:coverage": "jest --coverage",
@@ -17,32 +19,42 @@
         "db:start": "cd migrations && docker run -d --name db_mero -e POSTGRES_PASSWORD=password -p 5432:5432 postgres",
         "db:delete": "docker stop db_mero && docker rm db_mero"
     },
-    "author": "",
+    "author": "Radu B",
     "license": "ISC",
     "devDependencies": {
-        "@jest-mock/express": "^2.1.0",
-        "@prisma/client": "^6.2.1",
+        "@babel/core": "^7.18.2",
+        "@babel/node": "^7.17.10",
+        "@babel/plugin-proposal-decorators": "*",
+        "@babel/preset-env": "^7.18.2",
+        "@prisma/client": "^6.0.0",
         "@types/compression": "^1.7.5",
         "@types/express": "^5.0.0",
         "@types/jest": "^29.5.14",
-        "@types/luxon": "^3.4.2",
-        "@types/node": "^22.10.6",
-        "@typescript-eslint/eslint-plugin": "^8.20.0",
-        "@typescript-eslint/parser": "^8.20.0",
+        "@types/node": "^22.10.0",
+        "@types/supertest": "^6.0.2",
+        "body-parser": "^1.20.3",
         "compression": "^1.7.5",
         "dotenv": "^16.4.7",
-        "eslint": "^9.18.0",
-        "eslint-config-prettier": "^10.0.1",
-        "eslint-plugin-prettier": "^5.2.1",
-        "express": "^4.21.2",
+        "eslint": "^9.15.0",
         "express-rate-limit": "^7.5.0",
+        "globals": "^15.12.0",
         "jest": "^29.7.0",
-        "jest-mock-extended": "^4.0.0-beta1",
-        "luxon": "^3.5.0",
-        "prettier": "^3.4.2",
+        "nodemon": "^3.1.9",
+        "nyc": "^17.1.0",
+        "prettier": "^3.4.1",
+        "prisma": "^6.0.0",
+        "rimraf": "^6.0.1",
+        "supertest": "^7.0.0",
         "ts-jest": "^29.2.5",
         "ts-node": "^10.9.2",
-        "typescript": "^5.7.3"
+        "ts-node-dev": "^2.0.0",
+        "tsconfig-paths": "^4.2.0",
+        "tsx": "^4.19.2",
+        "typeorm": "^0.3.20",
+        "typescript": "^5.7.3",
+        "typescript-eslint": "^8.16.0",
+        "uuid": "^11.0.3",
+        "validator": "^13.12.0"
     },
     "dependencies": {
         "env-var": "^7.5.0"
