fix: js import; feat: docker-compose

--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "type": "module",
     "scripts": {
         "dev": "npx tsx src/app.ts",
-        "build": "rimraf ./dist && tsc --outDir ./dist",
-        "start": "node dist/src/app.js",
+        "build": "rimraf ./dist && tsc --rootDir ./src --outDir ./dist",
+        "start-docker": "node app.js",
+        "start": "node dist/app.js",
         "test-flag": "node --experimental-specifier-resolution=node jest",
         "test": "jest",
         "test:watch": "jest --watchAll",
@@ -35,6 +36,7 @@
         "body-parser": "^1.20.3",
         "compression": "^1.7.5",
         "dotenv": "^16.4.7",
+        "esbuild": "^0.24.2",
         "eslint": "^9.15.0",
         "express-rate-limit": "^7.5.0",
         "globals": "^15.12.0",
