--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,14 +8,13 @@ services:
     ports:
       - "8080:8080"
     env_file:
-      - .env
+      - .env.docker.dev
     environment:
       - NODE_ENV=development
       - DATABASE_URL=${DATABASE_URL}
     depends_on:
       - db
-      - migrate
-    command: npm run start
+    command: [ "wait-for-it", "db:5432", "--", "npm", "run", "start-docker" ]
 
   db:
     image: postgres:17.2-alpine
@@ -29,17 +28,6 @@ services:
       - "5432:5432"
     volumes:
       - db-data:/var/lib/postgresql/data
-
-  migrate:
-    image: node:18-alpine # Lightweight Node.js image to run Prisma CLI
-    working_dir: /app
-    volumes:
-      - .:/app # Mount your project directory into the container
-    env_file:
-      - .env
-    entrypoint: [ "sh", "-c" ]
-    command: >
-      npm install && npx prisma migrate deploy
 
 volumes:
   db-data:
