--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - DATABASE_URL=${DATABASE_URL}
     depends_on:
       - db
-    command: [ "wait-for-it", "db:5432", "--", "npm", "run", "start-docker" ]
+    command: [ "waiter", "db:5432", "--", "npm", "start" ]
 
   db:
     image: postgres:17.2-alpine
