--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,9 @@ services:
       - NODE_ENV=development
       - DATABASE_URL=${DATABASE_URL}
     depends_on:
-      - db
-    command: [ "waiter", "db:5432", "--", "npm", "start" ]
+      db:
+        condition: service_healthy
+    command: [ "npm", "start" ]
 
   db:
     image: postgres:17.2-alpine
@@ -26,6 +27,8 @@ services:
       - POSTGRES_DB=${DB_DATABASE}
     ports:
       - "5432:5432"
+    healthcheck:
+      test: "exit 0"
     volumes:
       - db-data:/var/lib/postgresql/data
 
