fix: migrations; run locally

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "dev": "npx tsx src/app.ts",
         "build": "rimraf ./dist && tsc --rootDir ./src --outDir ./dist",
         "start-docker": "npx prisma migrate deploy && npm start",
-        "start": "node app.js",
+        "start": "node ./dist/app.js",
         "test-flag": "node --experimental-specifier-resolution=node jest",
         "test": "jest",
         "test:watch": "jest --watchAll",
@@ -16,8 +16,8 @@
         "docker:build": "docker-compose build",
         "docker:up": "docker-compose up",
         "docker:down": "docker-compose down",
-        "db:create": "cd migrations && docker build -t db_mero .",
-        "db:start": "cd migrations && docker run -d --name db_mero -e POSTGRES_PASSWORD=password -p 5432:5432 postgres",
+        "db:create": "cd db && docker build -t db_mero .",
+        "db:start": "cd db && docker run -d --name db_mero -e POSTGRES_PASSWORD=password -p 5432:5432 postgres",
         "db:delete": "docker stop db_mero && docker rm db_mero"
     },
     "author": "Radu B",
