--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,36 +11,30 @@ services:
       - .env.docker.dev
     environment:
       - NODE_ENV=development
-      - DATABASE_URL=${DATABASE_URL}
     depends_on:
       db:
         condition: service_healthy
-    command: [ "npm", "start" ]
+    command: [ "npm", "run", "start-docker" ]
 
   db:
     image: postgres:17.2-alpine
     env_file:
-      - .env
-    environment:
-      - POSTGRES_USER=${DB_USER}
-      - POSTGRES_PASSWORD=${DB_PASS}
-      - POSTGRES_DB=${DB_DATABASE}
+      - .env.docker.dev
     ports:
       - "5432:5432"
     healthcheck:
       test: "exit 0"
     volumes:
       - db-data:/var/lib/postgresql/data
-
-  nginx:
-    image: nginx:latest
-    ports:
-      - "80:80"
-    volumes:
-      - ./proxy/nginx.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./dist:/app
-    depends_on:
-      - app
+  # nginx:
+  #   image: nginx:latest
+  #   ports:
+  #     - "80:80"
+  #   volumes:
+  #     - ./proxy/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+  #     - ./dist:/app
+  #   depends_on:
+  #     - app
 
 volumes:
   db-data:
