--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "start-docker": "npx prisma migrate deploy && npm start",
         "start": "node ./dist/app.js",
         "test-flag": "node --experimental-specifier-resolution=node jest",
-        "test": "jest",
+        "test": "jest --config=jest.config.js",
         "test:watch": "jest --watchAll",
         "test:coverage": "jest --coverage",
         "docker:build": "docker-compose build",
@@ -20,13 +20,16 @@
         "db:start": "cd db && docker run -d --name db_mero -e POSTGRES_PASSWORD=password -p 5432:5432 postgres",
         "db:delete": "docker stop db_mero && docker rm db_mero"
     },
+    "experimentalRequireModule": true,
     "author": "Radu B",
     "license": "ISC",
     "devDependencies": {
-        "@babel/core": "^7.18.2",
+        "@babel/core": "^7.26.0",
         "@babel/node": "^7.17.10",
         "@babel/plugin-proposal-decorators": "*",
-        "@babel/preset-env": "^7.18.2",
+        "@babel/preset-env": "^7.26.0",
+        "@babel/preset-typescript": "^7.26.0",
+        "@jest/globals": "^29.7.0",
         "@prisma/client": "^6.0.0",
         "@swc/core": "^1.10.9",
         "@swc/jest": "^0.2.37",
@@ -35,6 +38,7 @@
         "@types/jest": "^29.5.14",
         "@types/node": "^22.10.7",
         "@types/supertest": "^6.0.2",
+        "babel-jest": "^29.7.0",
         "body-parser": "^1.20.3",
         "compression": "^1.7.5",
         "dotenv": "^16.4.7",
@@ -43,6 +47,7 @@
         "express-rate-limit": "^7.5.0",
         "globals": "^15.12.0",
         "jest": "^29.7.0",
+        "jest-junit": "^16.0.0",
         "nodemon": "^3.1.9",
         "nyc": "^17.1.0",
         "prettier": "^3.4.1",
